{
    "name": "PS4Controlls",
    "maps": [
        {
            "name": "Player",
            "id": "0e810495-d36b-4437-921c-4b78377d9db4",
            "actions": [
                {
                    "name": "HorizontalMovement",
                    "type": "Button",
                    "id": "78faf112-c2b9-4ed3-a491-eaa74feec7c1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Sprinting",
                    "type": "Button",
                    "id": "65678f81-e8e8-4b82-bf63-f286561b8180",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "JumpTap",
                    "type": "Button",
                    "id": "bd650430-1826-4653-a895-07dafeb510dc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "JumpHold",
                    "type": "Button",
                    "id": "abab8de7-536b-41be-9d99-903e0c0bca45",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "82d3dace-a205-4bab-8346-f2cea62d65b7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Throw",
                    "type": "Button",
                    "id": "07241b22-cedb-4d78-ad07-778a20c7c55d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f5eef6c8-b703-42f5-85d4-3a22c29efbe1",
                    "path": "<DualShockGamepad>/buttonWest",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3efd72b4-7e90-4ae7-b3e1-292048a50c84",
                    "path": "<DualShockGamepad>/buttonEast",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "Throw",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b8aadaa6-fba3-4d01-a4e6-39ff3dd18b8d",
                    "path": "<DualShockGamepad>/buttonSouth",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "JumpHold",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "01d88901-6596-4bbc-a607-3fb0a44a2329",
                    "path": "<DualShockGamepad>/buttonSouth",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "JumpTap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "HorizontalMovement",
                    "id": "5ef924c0-01d8-49d6-838e-4423e4fd3bea",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "8d148b57-cfb7-4d46-bd16-37ac0f4dacec",
                    "path": "<DualShockGamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "53404668-a438-40ac-b285-f17b372d9a81",
                    "path": "<DualShockGamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "caf49436-deef-44cd-9836-06fca49d180b",
                    "path": "<DualShockGamepad>/rightTrigger",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "Sprinting",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "ControllerDetection",
            "id": "01463d2a-24c5-4e10-935d-21706349d6be",
            "actions": [
                {
                    "name": "Detection",
                    "type": "Button",
                    "id": "d91cee3d-31dd-4d06-8ff1-94b8965e3298",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "30da6860-cdba-45f1-8541-f5969028e04d",
                    "path": "<DualShockGamepad>/rightStick/",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Detection",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "952f51cc-7eee-459d-85a8-ee796be5282f",
                    "path": "<DualShockGamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Detection",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0acdc964-1d33-485c-b124-d35d33551d07",
                    "path": "<DualShockGamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Detection",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2607b7d9-829c-4aaa-b53b-144faef59129",
                    "path": "<DualShockGamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Detection",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}